# fintech-ab-experiment

./: .gitignore  README.md  interview_prep.md  main.py  pyproject.toml
notebooks/: drift_detection.py  evening1_data_prep.py  experiment_summary.py  group_balance_check.py  shap_explainability.py  significance_analysis.py
outputs/: drift_report.html
scripts/: run_balance_check.py  run_drift.py  run_shap.py  run_significance.py  run_summary.py
src/: pipeline.py
src/analysis/: balance.py  drift.py  shap.py  significance.py  summary.py
tests/: conftest.py  test_balance.py  test_drift.py  test_pipeline.py  test_shap.py  test_significance.py
