[project]
name = "fintech-ab-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "statsmodels",
    "shap>=0.43.0,<0.45.0",
    "ucimlrepo>=0.0.7",
    "tqdm>=4.67.3",
]
