[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fintech-ab-experiment"
version = "0.1.0"
description = "Production-grade A/B experiment analysis pipeline for feature adoption"
requires-python = ">=3.11"
dependencies = [
    "evidently>=0.7.21",
    "matplotlib>=3.9.0",
    "numpy>=1.24",
    "pandas>=2.2,<3",
    "scikit-learn>=1.8.0",
    "scipy>=1.13.0",
    "setuptools>=82.0.1",
    "shap>=0.51.0",
    "statsmodels>=0.14.0",
    "tqdm>=4.67.3",
    "ucimlrepo>=0.0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
